Projects page is wrapping correctly, now need to size images

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -69,38 +69,40 @@
 }
 
 .project-left {
-  width: 100%;
-  margin-left: 10px;
-  margin-right: 10px;
-  max-height: 35vh;
+  /* width: 100%;
+  margin: 10px;
   display: flex;
   flex-direction: row;
   align-items: left;
-  justify-content: flex-start;
+  justify-content: flex-start; */
+  /* max-height: 35vh; */
+  position: relative;
+	display: flex;
+	flex-flow: row wrap;
 }
 
 .project-right {
-  width: 100%;
-  margin-left: 10px;
-  margin-right: 10px;
-  max-height: 35vh;
+  /* width: 100%;
+  margin: 10px;
+
   display: flex;
   flex-direction: row;
   align-items: right;
-  justify-content: flex-end;
+  justify-content: flex-end; */
+  /* max-height: 35vh; */
+  position: relative;
+	display: flex;
+	flex-flow: row-reverse wrap;
 }
 
 .project-image {
-  margin-left: 5px;
-  margin-right: 5px;
-  flex-wrap: wrap;
-  max-width: 33%;
+  flex: 1;
   height: auto;
   object-fit: cover;
 }
 
 .project-description {
-  flex-wrap: wrap;
+  flex: 1;
   height: auto;
 }
 
